<resources>
    <string name="app_name">GymHub</string>

    <string name="name">Nombre</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="already_have_account">"¿Ya tienes un cuenta ? "</string>
    <string name="dark_theme">Tema oscuro</string>
    <string name="language">Idioma</string>
    <string name="default_language">Idioma por defecto</string>
    <string name="save">Guardar</string>
    <string name="select_workout">Selecciona el Workout</string>
    <string name="start">Empezar</string>

    <string name="login_title">Inicio de sesión</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="remember_me">Recordarme</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="loginButton">Ir</string>
    <string name="email" >Email</string>
    <string name="register">Regístro</string>
    <string name="last_name" >Apellidos</string>
    <string name="birthday" >Fecha de nacimiento</string>
    <string name="login" >Login</string>
    <string name="password" >Contraseña</string>
    <string name="go_back">Volver</string>
    <string name="perfil">Perfil</string>
    <string name="username">Nombre</string>
    <string name="nivel">Nivel</string>
    <string name="theme">Tema</string>
    <string name="role">Tipo de usuario</string>
    <string name="volver">Volver</string>
    <string name="Search">Buscar</string>
    <string name="workouts">Workouts</string>
    <string name="entrenador">Entrenador</string>
    <string-array name="items">
        <item>Cliente</item>
        <item>Entrenador</item>
    </string-array>
    <string name="save_success">Datos guardados correctamente</string>
    <string name="save_error">Error al guardar los datos</string>
    <string name="filter">Filtrar</string>
    <string name="historico">Historia</string>
    <string name="reproduccion">Reproducir</string>
    <string name="nombre_del_workout">Nombre del workout</string>
    <string name="nivel3">Nivel</string>
    <string name="n_mero_de_ejercicios">Número de ejercicios</string>
    <string name="url_del_video">URL del video</string>
    <string name="descripci_n">Descripción</string>
    <string name="tiempo_estimado_minutos">Tiempo estimado (minutos)</string>
    <string name="fecha">Fecha</string>
    <string name="reproducir_video">Reproducir video</string>
    <string name="ver_ejercicios">Ver ejercicios</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="volver3">Volver</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="a_adir_ejercicio">Añadir ejercicio</string>
    <string name="volver4">Volver</string>
    <string name="series_del_ejercicio">Series del ejercicio</string>
    <string name="a_adir_serie">Añadir serie</string>
    <string name="volver5">Volver</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="descripci_n2">Descripción</string>
    <string name="descanso_segundos">Descanso (segundos)</string>
    <string name="nombre_de_la_serie">Nombre de la serie</string>
    <string name="ej_serie_1">Ej: Serie 1</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="ej_10">Ej: 10</string>
    <string name="tiempo_segundos">Tiempo (segundos)</string>
    <string name="ej_60">Ej: 60</string>
    <string name="asignar_ejercicio">Asignar ejercicio</string>
    <string name="nombre_del_ejercicio2">Nombre del ejercicio</string>
    <string name="descripci_n3">Descripción</string>
    <string name="descanso_0_s">Descanso: 0 s</string>
    <string name="workout_sin_asignar">Workout: (sin asignar)</string>
    <string name="editar">Editar</string>
    <string name="eliminar2">Eliminar</string>
    <string name="series3">Series</string>
    <string name="serie4">Serie</string>
    <string name="reps_03">Reps: 0</string>
    <string name="tiempo_0_s">Tiempo: 0 s</string>
    <string name="editar2">Editar</string>
    <string name="eliminar4">Eliminar</string>
    <string name="n_mero_de_ejercicios_0">Número de ejercicios: 0</string>
    <string name="video_url">Video URL</string>
    <string name="reproducir_video2">Reproducir Video</string>
    <string name="nivel_07">Nivel: 0</string>
    <string name="acceder">Acceder</string>
    <string name="nivel_0">Nivel: 0</string>
    <string name="workout_name">Workout Name</string>
     <string-array name="levels_array">
        <item>Todos</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>



</resources>