<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- Logo o imagen superior -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="113dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_gymhub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título principal -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/register"
        android:textColor="#116173"
        android:textSize="48sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <!-- ScrollView que contiene los campos -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:fontFamily="sans-serif-condensed-medium" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:fontFamily="sans-serif-condensed-medium" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="sans-serif-condensed-medium" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:inputType="date"
                android:fontFamily="sans-serif-condensed-medium" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="text"
                android:fontFamily="sans-serif-condensed-medium" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-condensed-medium" />
        </LinearLayout>
    </ScrollView>

    <!-- Spinner para el tipo de usuario -->

    <!-- Botón de registro -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="203dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#116173"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoBack"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para volver atrás -->
    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#116173"
        android:text="@string/go_back"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
